@@ -2,6 +2,7 @@ package com.example.productmngmt.controller;
 
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
@@ -46,14 +47,14 @@ public class Controller {
 	@PostMapping("authenticate")
 	public ResponseEntity<ResponseModel> authenticate(@RequestBody AuthRequest authRequest) {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.TOKEN_KEY, proService.authenticate(authRequest))));
+				Collections.singletonMap(Constants.TOKEN_KEY, proService.authenticate(authRequest))));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
 	@PostMapping("create")
 	public ResponseEntity<ResponseModel> createProduct(@RequestBody List<@Valid ProductDto> productsDto) {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, proService.create(productsDto))));
+				Collections.singletonMap(Constants.MESSAGE_KEY, proService.create(productsDto))));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
@@ -61,7 +62,7 @@ public class Controller {
 	public ResponseEntity<ResponseModel> createUser(@RequestBody List<@Valid Users> users) throws InvalidKeyException,
 			NoSuchAlgorithmException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, proService.createUser(users))));
+				Collections.singletonMap(Constants.MESSAGE_KEY, proService.createUser(users))));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
@@ -92,28 +93,28 @@ public class Controller {
 	@DeleteMapping("delete/{pid}")
 	public ResponseEntity<ResponseModel> deleteProduct(@PathVariable Long pid) {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, "Product with Id : " + proService.deleteProd(pid) + " is deleted")));
+				Collections.singletonMap(Constants.MESSAGE_KEY, "Product with Id : " + proService.deleteProd(pid) + " is deleted")));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
 	@PostMapping("addStock")
 	public ResponseEntity<ResponseModel> addStock(@RequestBody Map<Long, Long> stockList) {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, proService.addStock(stockList))));
+				Collections.singletonMap(Constants.MESSAGE_KEY, proService.addStock(stockList))));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
 	@PostMapping("removeStock")
 	public ResponseEntity<ResponseModel> removeStock(@RequestBody Map<Long, Long> stockList) {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, proService.removeStock(stockList))));
+				Collections.singletonMap(Constants.MESSAGE_KEY, proService.removeStock(stockList))));
 	}
 
 	@PreAuthorize("hasAnyRole('ADMIN')")
 	@GetMapping("/logout")
 	public ResponseEntity<ResponseModel> logout() {
 		return ResponseEntity.ok(new ResponseModel(new Date().toString(), HttpStatus.OK,
-				Map.of(Constants.MESSAGE_KEY, proService.logoutUser())));
+				Collections.singletonMap(Constants.MESSAGE_KEY, proService.logoutUser())));
 
 	}
 }
